Fixed map toolbar z-index

--- a/Source/Web/Client/src/modules/map/Map.scss
+++ b/Source/Web/Client/src/modules/map/Map.scss
@@ -28,5 +28,6 @@
     position: absolute;
     left: 15px;
     top: 15px;
+    z-index: 400;
     @include shadow;
 }
